# ghillie

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  typos.local.toml  typos.toml
.config/helm/: repositories.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-main.yml  dependabot-automerge.yml  mutation-testing.yml  release.yml
.rules/: python-00.md  python-exception-design-raising-handling-and-logging.md  python-http-status-and-method.md  python-return.md  python-typing.md
charts/ghillie/: Chart.yaml  values.schema.json  values.yaml
docker/: entrypoint.sh
docs/: adr-001-adoption-of-femtologging-library.md  adr-002-vidaimock-integration-testing.md  adr-003-adopt-hecate-for-architecture-checks.md  async-sqlalchemy-with-pg-and-falcon.md  complexity-antipatterns-and-refactoring-strategies.md  developers-guide.md  femtologging-users-guide.md  ghillie-bronze-silver-architecture-design.md  ghillie-design.md  ghillie-proposal.md  github-application-configuration.md  k3d-python-example.md  local-k8s-preview-design.md  mvp-cli-specification.md  mvp-gap-analysis.md  roadmap.md  scripting-standards.md  testing-async-falcon-endpoints.md  testing-sqlalchemy-with-pytest-and-py-pglite.md  testing-sqlalchemy-with-temporary-postgresql.md  the-dramatiq-cookbook.md  users-guide.md
docs/execplans/: 1-5-b-ghillie-helm-chart-for-previews.md  2-1-b-implement-event-selection-and-grouping-per-window.md  2-2-1-define-status-model-interface.md  2-2-2-initial-llm-integration.md  2-2-3-configuration-for-model-selection.md  2-3-2-define-report-markdown-and-storage.md  2-3-3-on-demand-reporting-entry-point.md  2-4-1-basic-correctness-checks.md  2-4-2-reporting-metrics-and-costs.md  2-5-1-operator-cli-contract.md  2-5-1a-operator-cli-contract.md  3-1-1-project-evidence-structure.md  adopt-femtologging.md  adopt-hecate.md  femtologging-april-2026-migration.md  local-k8s-design.md  task-1-5-c-define-container-image-for-preview-workloads.md  task-1-5-d-local-k3d-lifecycle-script.md  upgrade-python-to-3-14-lazy-annotations.md  upgrade-python-to-3-14-readonly-attributes.md  upgrade-python-to-3-14-template-strings-in-prompts.md  upgrade-python-to-3-14-type-guards-in-openai-client.md  upgrade-python-to-3-14-uuid7-for-storage-ids.md
examples/: wildside-catalogue.yaml
ghillie/: __init__.py  logging.py  pure.py  runtime.py
ghillie/api/: __init__.py  app.py  errors.py  factory.py  middleware.py
ghillie/bronze/: __init__.py  errors.py  services.py  storage.py
ghillie/catalogue/: __init__.py  cli.py  importer.py  loader.py  models.py  schema.py  storage.py  validation.py  watch.py
ghillie/cli/: __init__.py  __main__.py  app.py  config.py  context.py  control_plane.py  output.py  runtime_adapters.py
ghillie/common/: __init__.py  ids.py  json.py  slug.py  time.py
ghillie/evidence/: __init__.py  classification.py  event_targets.py  models.py  project_service.py  service.py
ghillie/github/: __init__.py  client.py  errors.py  ingestion.py  lag.py  models.py  noise.py  observability.py
ghillie/gold/: __init__.py  storage.py
ghillie/registry/: __init__.py  errors.py  ingestion.py  listing.py  mapping.py  models.py  service.py  sync.py
ghillie/reporting/: __init__.py  _broker.py  actor.py  config.py  errors.py  filesystem_sink.py  markdown.py  metrics_service.py  observability.py  service.py  sink.py  validation.py
ghillie/silver/: __init__.py  errors.py  services.py  storage.py  transformers.py
ghillie/status/: __init__.py  config.py  constants.py  errors.py  factory.py  metrics.py  mock.py  models.py  openai_client.py  prompts.py  protocol.py
schemas/: catalogue.schema.json
scripts/: check_architecture.py  local_k8s.py
scripts/local_k8s/: __init__.py  _port_utils.py  cnpg.py  config.py  deployment.py  k3d.py  k3d_ports.py  k8s.py  operators.py  orchestration.py  validation.py  valkey.py
scripts/tests/: conftest.py  test_check_architecture.py  test_local_k8s.py  test_local_k8s_cli.py  test_local_k8s_cnpg.py  test_local_k8s_config.py  test_local_k8s_datastore_ops.py  test_local_k8s_deployment.py  test_local_k8s_k3d.py  test_local_k8s_k8s.py  test_local_k8s_monitoring.py  test_local_k8s_namespace.py  test_local_k8s_operators.py  test_local_k8s_utils.py  test_local_k8s_valkey.py
specs/: openapi.yml
tests/: __init__.py  conftest.py  helpers.py  test_workflow_contract.py
tests/features/: bronze_raw_events.feature  catalogue_importer.feature  catalogue_ingestion.feature  conftest.py  evidence_bundle.feature  github_incremental_ingestion.feature  github_ingestion_observability.feature  github_noise_filters.feature  gold_reports.feature  llm_integration.feature  model_selection.feature  on_demand_report.feature  operator_cli_contract.feature  project_evidence_bundle.feature  report_markdown.feature  report_validation.feature  reporting_metrics.feature  reporting_workflow.feature  repository_discovery.feature  runtime.feature  silver_entities.feature  status_model.feature
tests/fixtures/: __init__.py  specs.py
tests/helm/: __init__.py  conftest.py  test_template_render.py
tests/helpers/: event_builders.py  femtologging_capture.py  github_events.py
tests/integration/: __init__.py  conftest.py  test_openai_vidaimock.py
tests/unit/: conftest.py  github_ingestion_test_helpers.py  project_evidence_helpers.py  test_api_app.py  test_api_errors.py  test_api_middleware.py  test_api_report_resource.py  test_bronze_dedupe_key.py  test_bronze_raw_events.py  test_bronze_utc_datetime.py  test_bronze_writer.py  test_catalogue_api.py  test_catalogue_cli.py  test_catalogue_importer.py  test_catalogue_models.py  test_catalogue_schema.py  test_catalogue_watcher.py  test_common_ids.py  test_common_slug.py  test_config.py  test_docs_snapshots.py  test_evidence_classification.py  test_evidence_models.py  test_evidence_service.py  test_filesystem_sink.py  test_github_client_doc_classification.py  test_github_graphql_client.py  test_github_ingestion_backlog.py  test_github_ingestion_noise_filters.py  test_github_ingestion_observability.py  test_github_ingestion_worker.py  (+34 more)
(+76 files in other folders)
