[project]
name = "ghillie"
version = "1.0.0"
description = "ghillie package"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    {name = "DevBoxer Contributors", email = "noreply@devboxer.example.com"}
]
keywords = ["github", "analysis", "reporting", "ghillie", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "femtologging @ git+https://github.com/leynos/femtologging@691a73962df8f99308a82348d99c4f707c245e63",
    "msgspec>=0.21.1",
    "ruamel.yaml>=0.19.1",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "dramatiq>=1.16.0",
    "httpx>=0.27.0",
    "falcon>=4.3.1,<5.0.0",
    "granian>=1.0.0,<3.0.0",
    "cyclopts>=3,<4",
]

[project.scripts]
ghillie = "ghillie.cli:main"

[dependency-groups]
dev = [
    "hecate @ git+https://github.com/leynos/hecate@46f8c8798e7a80a3a1ab5a13c2a000a4423ffc12",
    "hypothesis>=6.150.0,<7",
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-xdist",
    "syrupy>=5.3.4,<6",
    "py-pglite[asyncpg]>=0.5.3",
    "asyncpg>=0.20.0,<1.0",
    "ruff",
    "pyright",
    "ty>=0.0.54",
    "pytest-timeout",
    # Script dependencies for type checking and testing
    "plumbum>=2.0.1,<3",
    "cmd-mox>=0.2,<1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "D",
    "ANN",
    "C90",
    "PLR",
]
per-file-ignores = {"**/tests/**/*.py" = ["S101", "PLR2004", "D102", "D103"]}
ignore = ["D203", "D213"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
"msgspec.json" = "msjson"
typing = "typ"

[tool.ruff.lint.flake8-type-checking]
# SQLAlchemy ORM models require type annotations at runtime for relationship()
# and mapped_column() introspection.
runtime-evaluated-base-classes = ["ghillie.bronze.storage.Base"]

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.pylint]
max-args = 4

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
# Tests automatically killed after seconds elapsed
timeout = 30
# Register cmd-mox plugin for external command mocking
addopts = "-p cmd_mox.pytest_plugin"
markers = [
    "configuration: marks tests about configuration handling",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "llm: marks tests that require LLM mock infrastructure",
    "status: marks tests about status reporting",
]

[tool.uv]
package = true

[tool.hecate]
root_packages = ["ghillie"]

[[tool.hecate.groups]]
name = "composition_root"
prefixes = [
    "ghillie.api.app",
    "ghillie.api.factory",
    "ghillie.cli.app",
    "ghillie.reporting.actor",
    "ghillie.runtime",
    "ghillie.status.factory",
]
allowed = [
    "application",
    "composition_root",
    "domain_ports",
    "inbound_adapter",
    "outbound_adapter",
    "package_facade",
]

[[tool.hecate.groups]]
name = "domain_ports"
prefixes = [
    "ghillie.common",
    "ghillie.catalogue.models",
    "ghillie.evidence.models",
    "ghillie.registry.models",
    "ghillie.reporting.sink",
    "ghillie.status.metrics",
    "ghillie.status.models",
    "ghillie.status.protocol",
]
allowed = ["domain_ports"]

[[tool.hecate.groups]]
name = "application"
# Hecate uses first-match semantics. Keep narrower prefixes above generic
# package prefixes such as ghillie.registry.
prefixes = [
    "ghillie.bronze.errors",
    "ghillie.bronze.services",
    "ghillie.catalogue.importer",
    "ghillie.catalogue.loader",
    "ghillie.catalogue.schema",
    "ghillie.catalogue.validation",
    "ghillie.catalogue.watch",
    "ghillie.evidence.classification",
    "ghillie.evidence.event_targets",
    "ghillie.evidence.project_service",
    "ghillie.evidence.service",
    "ghillie.github.errors",
    "ghillie.github.ingestion",
    "ghillie.github.lag",
    "ghillie.github.models",
    "ghillie.github.noise",
    "ghillie.github.observability",
    "ghillie.logging",
    "ghillie.registry",  # generic — all ghillie.registry.* leaf entries must precede this
    "ghillie.reporting.config",
    "ghillie.reporting.errors",
    "ghillie.reporting.markdown",
    "ghillie.reporting.metrics_service",
    "ghillie.reporting.observability",
    "ghillie.reporting.service",
    "ghillie.reporting.validation",
    "ghillie.silver.errors",
    "ghillie.silver.services",
    "ghillie.silver.transformers",
    "ghillie.status.config",
    "ghillie.status.constants",
    "ghillie.status.errors",
    "ghillie.status.prompts",
]
allowed = [
    "application",
    "domain_ports",
    "outbound_adapter",
]

[[tool.hecate.groups]]
name = "inbound_adapter"
# Keep composition-root prefixes such as ghillie.api.app and
# ghillie.api.factory above this generic ghillie.api adapter prefix.
prefixes = [
    "ghillie.api",  # generic — ghillie.api.app and ghillie.api.factory must remain above this
    "ghillie.catalogue.cli",
    "ghillie.cli",
]
allowed = [
    "application",
    "composition_root",
    "domain_ports",
    "inbound_adapter",
    "outbound_adapter",
    "package_facade",
]

[[tool.hecate.groups]]
name = "outbound_adapter"
prefixes = [
    "ghillie.bronze.storage",
    "ghillie.catalogue.storage",
    "ghillie.github.client",
    "ghillie.gold.storage",
    "ghillie.reporting.filesystem_sink",
    "ghillie.silver.storage",
    "ghillie.status.mock",
    "ghillie.status.openai_client",
]
allowed = [
    "application",
    "domain_ports",
    "outbound_adapter",
]

[[tool.hecate.groups]]
name = "package_facade"
# Package facades re-export mixed boundary objects. Keep this group after all
# leaf-module groups so it catches only ghillie.status and ghillie.reporting.
prefixes = [
    "ghillie.reporting",  # generic — all ghillie.reporting.* leaf entries must precede this
    "ghillie.status",  # generic — all ghillie.status.* leaf entries must precede this
]
allowed = [
    "application",
    "composition_root",
    "domain_ports",
    "inbound_adapter",
    "outbound_adapter",
]

[tool.setuptools.packages.find]
include = ["ghillie*"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
